# jsonschema2md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ghci.yaml  renovate.json5
.github/workflows/: main.yaml
ci/: requirements.txt
examples/: basic.md  food.md  ms2rescore.md  vegetables.md
jsonschema2md/: __init__.py
jsonschema2md/locales/: README.md  messages.pot
jsonschema2md/locales/fr/LC_MESSAGES/: messages.po
jsonschema2md/locales/fr_CH/LC_MESSAGES/: messages.po
jsonschema2md/locales/pt/LC_MESSAGES/: messages.po
jsonschema2md/locales/pt/pt_BR/LC_MESSAGES/: messages.po
jsonschema2md/locales/pt_BR/LC_MESSAGES/: messages.po
scripts/: build.py
tests/: test_jsonschema2md.py
