[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "6.0.2"
markdown = "3.8.2"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.2", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.23.0"
types-PyYAML = "6.0.12.20250516"
pytest = "8.4.1"
pytest-cov = "6.2.1"
types-markdown = "3.8.0.20250415"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
dynamic = ["dependencies", "version"]
name = "jsonschema2md"
description = "Convert JSON Schema to human-readable Markdown documentation"
readme = "README.md"
keywords = ["JSON Schema", "Markdown", "Converter", "Parser", "Documentation"]
license = "Apache-2.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Documentation',
    'Topic :: Software Development :: Documentation',
]
authors = [{name = "Ralf Gabriels",email = "ralfg@hotmail.be"}, {name = "Matt Graham",email = "matthew.m.graham@gmail.com"}]
maintainers = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/sbrunner/jsonschema2md"
"Bug Tracker" = "https://github.com/sbrunner/jsonschema2md/issues"

[project.scripts]
jsonschema2md = 'jsonschema2md:main'

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"
