[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "ASYNC", "D", "E722", "FBT003", "INP001", "N", "PLC0415", "PLR2004", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF"]
"**/tests/**" = ["ANN", "ARG", "ASYNC", "D", "E722", "FBT003", "INP001", "N", "PLC0415", "PLR2004", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF"]
"**/test_*.py" = ["ANN", "ARG", "ASYNC", "D", "E722", "FBT003", "INP001", "N", "PLC0415", "PLR2004", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF"]
"**/*_test.py" = ["ANN", "ARG", "ASYNC", "D", "E722", "FBT003", "INP001", "N", "PLC0415", "PLR2004", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "6.0.2"
markdown = "3.8.2"
babel = "2.17.0"

[tool.poetry.build]
script = "scripts/build.py"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.3", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.26.3"
types-PyYAML = "6.0.12.20250516"
pytest = "8.4.1"
pytest-cov = "6.2.1"
types-markdown = "3.8.0.20250708"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
dynamic = ["dependencies", "version"]
name = "jsonschema2md"
description = "Convert JSON Schema to human-readable Markdown documentation"
readme = "README.md"
keywords = ["JSON Schema", "Markdown", "Converter", "Parser", "Documentation"]
license = "Apache-2.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Documentation',
    'Topic :: Software Development :: Documentation',
]
authors = [{name = "Ralf Gabriels",email = "ralfg@hotmail.be"}, {name = "Matt Graham",email = "matthew.m.graham@gmail.com"}]
maintainers = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
requires-python = ">=3.9"
dependencies = ["PyYAML<7,>=6", "markdown<4,>=3", "babel<3,>=2"]
exclude = [
    "jsonschema2md/locales",
]
include = [
    { path = "jsonschema2md/locales", format = "sdist" },
    { path = "jsonschema2md/locales/**/*.mo",  format = "wheel" },
]

[project.urls]
repository = "https://github.com/sbrunner/jsonschema2md"
"Bug Tracker" = "https://github.com/sbrunner/jsonschema2md/issues"

[project.scripts]
jsonschema2md = 'jsonschema2md:main'

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-dynamic-versioning",
    "babel==2.17.0",
]
build-backend = "poetry.core.masonry.api"
